# schedule

./: .gitignore  README.md  build-release.bat  build-release.ps1  schedule.prd.md  start-dev.ps1  stop-dev.bat  stop-dev.ps1  三端联通上线操作手册.md  任务记忆文档.md  手机端操作手册.md  电脑端任务记忆文档.md  电脑端项目文件索引.json  电脑端项目文件索引.md  项目文件索引.json  项目文件索引.md
schedule_backend/: README.md  requirements.txt  run.py  任务记忆文档.md  项目文件索引.json  项目文件索引.md
schedule_backend/app/: __init__.py  main.py
schedule_backend/app/api/: ai.py  courses.py  daily_tasks.py  deps.py  events.py  health.py  imports.py  long_term_tasks.py  settings.py  study_sessions.py  study_stats.py  sync.py  task_templates.py  timer.py
schedule_backend/data/: app.db
schedule_backend/tests/: test_ai_deepseek.py  test_ai_parse_apply_defaults.py  test_ai_workflow.py  test_daily_task_completion.py  test_health_and_ai.py  test_long_term_tasks.py  test_sync_local.py
schedule_frontend/: .npm-install.sha256  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
schedule_frontend/public/: course-import-template.json
schedule_frontend/src/: components.d.ts  main.ts
schedule_frontend/src-tauri/: Cargo.toml  tauri.conf.json
schedule_frontend/src-tauri/capabilities/: default.json
schedule_frontend/src-tauri/src/: main.rs
scripts/: start-backend.ps1  start-frontend.ps1
初期构建md/: scheduleAPI接口清单.md  schedule数据库表结构草案.md  schedule首版开发prompt.md  云同步服务与本地客户端构建方案.md  云服务器构建方案.md  手机端App与云同步操作流程.md  手机端UI设计模型Prompt.md  手机端构建方案.md  日程安排_iOS安装测试上架操作手册.md  本地电脑客户端构建方案.md  短期升级方案.md
(+146 files in other folders)
